force-app/main/default/objects/Integration_In__c/Integration_In__c.object-meta.xml
<CustomObject>
    <label>Integration In</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Integration In Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Ins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>