force-app/main/default/objects/Integration_In__c/fields/Constituent_Id__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Integration Ins</relationshipLabel>
    <relationshipName>Integration_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>