force-app/main/default/objects/Integration_In__c/fields/done_message__c.field-meta.xml
<CustomField>
    <fullName>done_message__c</fullName>
    <label>done message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>