force-app/main/default/objects/Integration_In__c/fields/error_message__c.field-meta.xml
<CustomField>
    <fullName>error_message__c</fullName>
    <label>error message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>