force-app/main/default/objects/Integration_In__c/fields/message_id__c.field-meta.xml
<CustomField>
    <fullName>message_id__c</fullName>
    <label>message id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>