force-app/main/default/objects/Integration_In__c/fields/message_type__c.field-meta.xml
<CustomField>
    <fullName>message_type__c</fullName>
    <label>message type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>