force-app/main/default/objects/Integration_In__c/fields/ND_hivebrite_create_from_id__c.field-meta.xml
<CustomField>
    <fullName>ND_hivebrite_create_from_id__c</fullName>
    <description>This field is used only when creating a Salesforce record that was sourced from the Hivebrite system. It will be used to link the Salesforce record to the Hivebrite record when data flows back from CRM to Hivebrite. It will not be used to keep things in sync ongoing. The data in this field is only required until the record is linked to this Salesforce record in Hivebrite.</description>
    <inlineHelpText>This field is used only when creating a Salesforce record that was sourced from the Hivebrite system. It will be used to link the Salesforce record to the Hivebrite record when data flows back from CRM to Hivebrite.</inlineHelpText>
    <label>Hivebrite Create From ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>