force-app/main/default/objects/Integration_In__c/fields/process_id__c.field-meta.xml
<CustomField>
    <fullName>process_id__c</fullName>
    <label>process id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>