force-app/main/default/objects/Integration_In__c/fields/source_schema__c.field-meta.xml
<CustomField>
    <fullName>source_schema__c</fullName>
    <label>source schema</label>
    <length>255</length>
    <type>Text</type>
</CustomField>