force-app/main/default/objects/Integration_In__c/fields/source_system__c.field-meta.xml
<CustomField>
    <fullName>source_system__c</fullName>
    <label>source system</label>
    <length>255</length>
    <type>Text</type>
</CustomField>