force-app/main/default/objects/Integration_In__c/fields/Spouse_Constituent_Id__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Constituent_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse Constituent Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Integration Ins (Spouse Constituent Id)</relationshipLabel>
    <relationshipName>spouse_Id</relationshipName>
    <type>Lookup</type>
</CustomField>