force-app/main/default/objects/Integration_In__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>message_type__c</columns>
    <columns>status__c</columns>
    <columns>source_system__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>